rea algo in progress